# AttachExtendedMac

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  release.yml
gradle/: mavenPublish.gradle  native-build.gradle
gradle/include/: AttachMacros.h
modules/capture-video/: CMakeLists.txt  build.gradle
modules/capture-video/src/main/java/: module-info.java
modules/capture-video/src/main/java/com/gluonhq/attachextendedmac/capturevideo/: CaptureVideoService.java  Frame.java  package-info.java
modules/capture-video/src/main/java/com/gluonhq/attachextendedmac/capturevideo/impl/: DesktopCaptureVideoService.java  DummyCaptureVideoService.java
modules/capture-video/src/main/native/darwin/: CaptureVideo.h  CaptureVideo.m
modules/capture-video/src/main/native/linux/: CMakeLists.txt  capture.c
modules/capture-video/src/main/native/linux/src/: capture.c
modules/local-notifications/: build.gradle
modules/local-notifications/src/main/java/: module-info.java
modules/local-notifications/src/main/java/com/gluonhq/attachextendedmac/localnotifications/: LocalNotificationsService.java  Notification.java  package-info.java
modules/local-notifications/src/main/native/darwin/: LocalNotifications.m
modules/runtime-args/: build.gradle
modules/runtime-args/src/main/java/: module-info.java
modules/runtime-args/src/main/java/com/gluonhq/attachextendedmac/runtimeargs/: RuntimeArgsService.java  package-info.java
modules/runtime-args/src/main/native/darwin/: RuntimeArgs.h  RuntimeArgs.m
(+7 files in other folders)
